; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netsmb/extr_smb_conn.c_smb_sm_done.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netsmb/extr_smb_conn.c_smb_sm_done.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@smb_vclist = common dso_local global %struct.TYPE_3__ zeroinitializer, align 4
@.str = private unnamed_addr constant [29 x i8] c"%d connections still active\0A\00", align 1
@EBUSY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @smb_sm_done() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @smb_vclist, i32 0, i32 0), align 4
  %3 = icmp sgt i32 %2, 1
  br i1 %3, label %4, label %9

4:                                                ; preds = %0
  %5 = load i32, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @smb_vclist, i32 0, i32 0), align 4
  %6 = sub nsw i32 %5, 1
  %7 = call i32 @SMBERROR(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0), i32 %6)
  %8 = load i32, i32* @EBUSY, align 4
  store i32 %8, i32* %1, align 4
  br label %11

9:                                                ; preds = %0
  %10 = call i32 @smb_co_done(%struct.TYPE_3__* @smb_vclist)
  store i32 0, i32* %1, align 4
  br label %11

11:                                               ; preds = %9, %4
  %12 = load i32, i32* %1, align 4
  ret i32 %12
}

declare dso_local i32 @SMBERROR(i8*, i32) #1

declare dso_local i32 @smb_co_done(%struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
